2003-06-07  William Jon McCann  <mccann@jhu.edu>

	* glines.c: Use pixbufs for ball images.  Use grid lines instead
	of background pixmaps.  HIG fixes for preferences dialog.

2003-06-06  William Jon McCann  <mccann@jhu.edu>

	* Makefile.am (schema_in_files): 
	* glines.schemas.in: Added gconf schemas.

	* glines.c: Glines now uses gconf.  HIG fixes for pref dialog.

2003-05-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Implement setgid modifications
	(see gnome-games/ChangeLog). Also undo the score directory
	changes. It breaks more than it fixes.
	
2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (scoredir): Changed score directory to fix bug
	#113968.

2003-04-30  Abel Cheung  <maddog@linux.org.hk>

	* ChangeLog: Convert to UTF-8.

2002-12-24 John Fleck <jfleck@inkstain.net>

	* help/C/glines.xml: add <figure> tags around screenshots
	so the links to them display correctly in Yelp

2002-12-11  Ross Burton  <ross@burtonini.com>

	* help/C/glines-C.omf:
	* help/C/glines.xml: More s/Gnome/GNOME/.

2002-11-27  Ross Burton  <ross@burtonini.com>

	* glines.c: s/Gnome/GNOME/, for #99683.

2002-11-21  Tim Musson  <trmusson@ihug.co.nz>

	* glines.c: (game_about_callback) (game_top_ten_callback) (game_over):
	No more multiple About dialogs, and Score dialog is now modal.
	(Bug #97320)

2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* glines.desktop.in: add X-GNOME-BUGZILLA stuff

2002-11-18  Jeremy Browne  <jeremy@synonymous.ca>

	* glines.c: Changes to quit dialog for consistency with other parts of
	gnome-games package. (Bug #97321)

2002-11-10  Tim Musson <trmusson@ihug.co.nz>

	* glines.c: (field_expose_event): redraw more squares after expose
	events (fixes #97314)

2002-11-11  Ross Burton  <ross@burtonini.com>

	* glines.png: New icon contributed by Timothy Musson.

2002-09-20  Ross Burton  <ross@burtonini.com>

	* help/C/glines.xml: Fix paths to the images, closing #93386.
